fix: correct squared exponent font color and super alignment on LCD screen

--- a/Web/src/styles/components.css
+++ b/Web/src/styles/components.css
@@ -1270,6 +1270,17 @@ sub + sup, sup + sub {
   cursor: pointer;
 }
 
+.casio-screen sup, .casio-sup, .power-exp {
+  font-size: 0.6em;
+  vertical-align: super;
+  line-height: 0;
+  color: #122115 !important;
+  font-weight: 900;
+  margin-left: 0.5px;
+  position: relative;
+  top: -0.45em;
+}
+
 .frac-box {
   display: inline-block;
   width: 14px;
